# bestock-analyzer

./: .env.example  .gitignore  README.md  pyproject.toml
.cursor/rules/: langchain.mdc
outputs/: bestock_graph.mmd
src/bestock_agent/: __init__.py  app.py  checkpoint.py  cli.py  config.py  export_graph.py  graph.py  logging.py  schemas.py  state.py  state_migration.py
src/bestock_agent/chains/: __init__.py  query_refinement_chain.py  report_chain.py  sentiment_chain.py
src/bestock_agent/nodes/: __init__.py  analyze_trend.py  build_charts.py  compare_with_indices.py  compose_report.py  error_handler.py  fetch_news_and_sentiment.py  fetch_price_history.py  fetch_top_gainer.py  send_email.py
src/bestock_agent/providers/: __init__.py  alphavantage_provider.py  brave_provider.py  financial_base.py  finnhub_provider.py  news_base.py  serpapi_provider.py  smtp_provider.py  yfinance_provider.py
src/bestock_agent/services/: __init__.py  analysis.py  backoff.py  charts.py  email.py  fallback.py  validation.py
src/bestock_agent/ui/: __init__.py  gradio_app.py
tests/: conftest.py  test_analysis.py  test_backoff.py  test_checkpoint.py  test_config.py  test_fallback.py  test_graph_routing.py  test_happy_flow.py  test_logging.py  test_query_refinement.py  test_report_payload.py  test_validation.py
tests/fixtures/: news_results.json  price_history.json  top_gainers.json
