[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bestock-agent"
version = "0.1.0"
description = "LangChain + LangGraph agent that finds and analyzes the best NASDAQ stock of the day"
requires-python = ">=3.11"
dependencies = [
    # LangChain ecosystem
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langchain-community>=0.3",
    "langgraph>=0.2",
    "langsmith>=0.1",
    # Pydantic & config
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    # Financial data providers
    "finnhub-python>=2.4",
    "yfinance>=0.2",
    # News providers
    "google-search-results>=2.4",  # SerpAPI
    "httpx>=0.27",                 # Brave Search REST calls
    # Visualization
    "plotly>=5.22",
    "kaleido>=0.2",                # Static PNG export for Plotly
    # UI
    "gradio>=4.36",
    # Email
    "aiosmtplib>=3.0",
]

[project.scripts]
bestock = "bestock_agent.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bestock_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
