[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bestock-agent"
version = "0.1.0"
description = "LangChain + LangGraph agent that finds and analyzes the best NASDAQ stock of the day"
requires-python = ">=3.11"
dependencies = [
    # LangChain ecosystem
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langchain-community>=0.3",
    "langgraph>=0.2",
    "langsmith>=0.1",
    # Pydantic & config
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    # Financial data providers
    "yfinance>=0.2",
    # httpx used for Alpha Vantage REST calls (also used by Brave Search)
    # News providers
    "google-search-results>=2.4",  # SerpAPI
    "httpx>=0.27",                 # Brave Search REST calls
    # Visualization
    "plotly>=5.22",
    "matplotlib>=3.8",             # Chart PNG export — no browser dependency
    # UI
    "gradio>=4.36",
    # Email
    "aiosmtplib>=3.0",
]

[project.scripts]
bestock = "bestock_agent.cli:main"
bestock-ui = "bestock_agent.app:main"
bestock-graph = "bestock_agent.export_graph:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bestock_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
